# flops-calculator

./: README.md  pyproject.toml  run.py
src/flops_calculator/: flops_calculator.py  main.py  utils.py
src/tests/: test_flops_calculator_conv.py  test_flops_calculator_init.py  test_flops_calculator_linear.py  test_flops_calculator_misc.py  test_flops_calculator_rnn.py
