[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flops_calculator"
version = "0.1.0"
description = "A Python library to calculate FLOPs for PyTorch models."
authors = [
    { name = "Alper Karaca", email = "" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=1.10.0",
    "torchvision>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/thealper2/flops-calculator"
Repository = "https://github.com/thealper2/flops-calculator"
Bug Tracker = "https://github.com/thelpaer/flops-calculator/issues"

[project.scripts]
flops-calculator = "flops_calculator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']